add category model and assigned plays to users and categories

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="nav navbar-default">
+    <div class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
           <%= link_to "Broadway", root_path, class: "navbar-brand" %>
