--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,17 @@
             <li><%= link_to "Log In", new_user_session_path %></li>
           <% end %>
         </ul>
-
         <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href = "#" class="dropdown-toggle" data-toggle="dropdown" type="button" aria-haspopup="true" aria-expanded="false">
+              Sort<span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton", role="menu">
+              <% Category.all.each do |category| %>
+                <li class="<%= 'active' if params[:category] == category.name %>"><%= link_to category.name, plays_path(category.name), class: "link" %></li>
+              <% end %>
+            </ul>
+          </li>
           <% if user_signed_in? %>
             <li><%= link_to  "Add Play", new_play_path %></li>
           <% end %>
