--- a/app/views/plays/_form.html.erb
+++ b/app/views/plays/_form.html.erb
@@ -1,5 +1,9 @@
-<%= simple_form_for @play do |f| %>
-  <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Select Category") %>
+<%= simple_form_for @play, html: {multipart: true} do |f| %>
+  <% if controller.action_name =="new" %>
+    <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Select Category") %>
+  <% else %>
+    <%= f.select :category_id, @categories %>
+  <% end %>
   <%= f.input :title, label: "Play Title" %>
   <%= f.input :description %>
   <%= f.input :director %>
