--- a/app/views/plays/index.html.erb
+++ b/app/views/plays/index.html.erb
@@ -1,4 +1,9 @@
+<h1 class="current-category"><%= params[:format] %></h1>
 
-<% @plays.each do |play| %>
-  <h2><%= link_to play.title, play_path(play) %></h2>
+<% if @plays.present? %>
+  <% @plays.each do |play| %>
+    <h2><%= link_to play.title, play_path(play) %></h2>
+  <% end %>
+<% else %>
+  <h3>There are no plays in this category</h3>
 <% end %>
