--- a/app/views/plays/index.html.erb
+++ b/app/views/plays/index.html.erb
@@ -2,7 +2,15 @@
 
 <% if @plays.present? %>
   <% @plays.each do |play| %>
-    <h2><%= link_to play.title, play_path(play) %></h2>
+    <div class="col-md-3">
+      <a href="/plays/ <%= play.id %>">
+        <% if play.play_img.attached? %>
+          <%= image_tag play.play_img.variant(resize: "250x350"), class: "play" %>
+        <% else %>
+          <h2><%= link_to play.title, play_path(play), class: "play" %></h2>
+        <% end %>
+      </a>
+    </div>
   <% end %>
 <% else %>
   <h3>There are no plays in this category</h3>
