--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -17,6 +17,17 @@
     </div>
   </div>
 </div>
+<div class="row">
+  <div class="col-md-12">
+    <div clas="reviews">
+      <h1>Review</h1>
+      <%= render @play.reviews %>
+      <div>
+        <%= link_to "Add Reviews", new_play_review_path(@play), class: "btn-custom" %>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="links btn-group">
   <% if user_signed_in? %>
     <% if @play.user_id == current_user.id %>
